--- a/project.tt.json
+++ b/project.tt.json
@@ -1,6 +1,6 @@
 {
   "miniprogramRoot": "./",
-  "projectname": "lunarhook-heart-kitapp",
+  "projectname": "lunarhook-fingerheart-kitapp",
   "appid": "testAppId",
   "setting": {
     "es6": false,
