--- a/project.config.json
+++ b/project.config.json
@@ -2,7 +2,7 @@
   "miniprogramRoot": "dist/",
   "projectname": "lunarhook-fingerheart-kitapp",
   "description": "fingerheart",
-  "appid": "wx9bd010e0e76e1001",
+  "appid": "wx32f13a7baedad867",
   "setting": {
     "urlCheck": true,
     "es6": false,
