--- a/project.private.config.json
+++ b/project.private.config.json
@@ -3,5 +3,6 @@
   "projectname": "lunarhook-fingerheart-kitapp",
   "setting": {
     "compileHotReLoad": true
-  }
+  },
+  "libVersion": "3.4.10"
 }
