--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
   },
   "scripts": {
     "build:weapp": "taro build --type weapp",
-    "dev:weapp": "npm run build:weapp -- --watch",
-    "test": "jest"
+    "dev:weapp": "npm run build:weapp -- --watch"
   },
   "browserslist": [
     "last 3 versions",
