--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "lunarhook-fingerheart-kitapp",
+  "name": "lunarhook-heart-kitapp",
   "version": "1.0.0",
   "private": true,
-  "description": "fingerheart",
+  "description": "比心家长端小程序",
   "templateInfo": {
     "name": "default",
     "typescript": false,
@@ -11,7 +11,23 @@
   },
   "scripts": {
     "build:weapp": "taro build --type weapp",
-    "dev:weapp": "npm run build:weapp -- --watch"
+    "build:swan": "taro build --type swan",
+    "build:alipay": "taro build --type alipay",
+    "build:tt": "taro build --type tt",
+    "build:h5": "taro build --type h5",
+    "build:rn": "taro build --type rn",
+    "build:qq": "taro build --type qq",
+    "build:jd": "taro build --type jd",
+    "build:harmony-hybrid": "taro build --type harmony-hybrid",
+    "dev:weapp": "npm run build:weapp -- --watch",
+    "dev:swan": "npm run build:swan -- --watch",
+    "dev:alipay": "npm run build:alipay -- --watch",
+    "dev:tt": "npm run build:tt -- --watch",
+    "dev:h5": "npm run build:h5 -- --watch",
+    "dev:rn": "npm run build:rn -- --watch",
+    "dev:qq": "npm run build:qq -- --watch",
+    "dev:jd": "npm run build:jd -- --watch",
+    "dev:harmony-hybrid": "npm run build:harmony-hybrid -- --watch"
   },
   "browserslist": [
     "last 3 versions",
@@ -19,45 +35,47 @@
     "ios >= 8"
   ],
   "dependencies": {
-    "@babel/runtime": "^7.21.5",
-    "@tarojs/components": "3.6.28",
-    "@tarojs/helper": "3.6.28",
-    "@tarojs/plugin-framework-react": "3.6.28",
-    "@tarojs/plugin-platform-alipay": "3.6.28",
-    "@tarojs/plugin-platform-h5": "3.6.28",
-    "@tarojs/plugin-platform-harmony-hybrid": "3.6.28",
-    "@tarojs/plugin-platform-jd": "3.6.28",
-    "@tarojs/plugin-platform-qq": "3.6.28",
-    "@tarojs/plugin-platform-swan": "3.6.28",
-    "@tarojs/plugin-platform-tt": "3.6.28",
-    "@tarojs/plugin-platform-weapp": "3.6.28",
-    "@tarojs/react": "3.6.28",
-    "@tarojs/runtime": "3.6.28",
-    "@tarojs/shared": "3.6.28",
-    "@tarojs/taro": "3.6.28",
-    "react": "^18.0.0",
+    "@babel/runtime": "^7.24.4",
+    "@tarojs/components": "4.0.3",
+    "@tarojs/helper": "4.0.3",
+    "@tarojs/plugin-platform-weapp": "4.0.3",
+    "@tarojs/plugin-platform-alipay": "4.0.3",
+    "@tarojs/plugin-platform-tt": "4.0.3",
+    "@tarojs/plugin-platform-swan": "4.0.3",
+    "@tarojs/plugin-platform-jd": "4.0.3",
+    "@tarojs/plugin-platform-qq": "4.0.3",
+    "@tarojs/plugin-platform-h5": "4.0.3",
+    "@tarojs/plugin-platform-harmony-hybrid": "4.0.3",
+    "@tarojs/runtime": "4.0.3",
+    "@tarojs/shared": "4.0.3",
+    "@tarojs/taro": "4.0.3",
+    "@tarojs/plugin-framework-react": "4.0.3",
+    "@tarojs/react": "4.0.3",
     "react-dom": "^18.0.0",
+    "react": "^18.0.0",
     "taro-ui": "^3.3.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.8.0",
+    "@babel/core": "^7.24.4",
+    "@babel/plugin-proposal-class-properties": "7.14.5",
+    "@babel/preset-react": "^7.24.1",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.5",
-    "@tarojs/cli": "3.6.28",
-    "@tarojs/taro-loader": "3.6.28",
-    "@tarojs/webpack5-runner": "3.6.28",
-    "@types/node": "^18.15.11",
+    "@tarojs/cli": "4.0.3",
+    "@tarojs/taro-loader": "4.0.3",
+    "@tarojs/webpack5-runner": "4.0.3",
+    "@types/node": "^18",
     "@types/react": "^18.0.0",
     "@types/webpack-env": "^1.13.6",
-    "babel-preset-taro": "3.6.28",
-    "eslint": "^8.12.0",
-    "eslint-config-taro": "3.6.28",
-    "eslint-plugin-import": "^2.12.0",
-    "eslint-plugin-react": "^7.8.2",
-    "eslint-plugin-react-hooks": "^4.2.0",
-    "postcss": "^8.4.18",
-    "react-refresh": "^0.11.0",
-    "stylelint": "^14.4.0",
-    "ts-node": "^10.9.1",
-    "webpack": "5.78.0"
+    "babel-preset-taro": "4.0.3",
+    "eslint": "^8.57.0",
+    "eslint-config-taro": "4.0.3",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-react": "^7.34.1",
+    "eslint-plugin-react-hooks": "^4.4.0",
+    "postcss": "^8.4.38",
+    "react-refresh": "^0.14.0",
+    "sass": "^1.75.0",
+    "stylelint": "^16.4.0",
+    "webpack": "5.91.0"
   }
 }
